--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <header>
         <section class="bg-gray-900 p-2 text-white flex items-center gap-5 justify-between">
             <div class="flex items-center">
-            <img src="assets/img/logo-G.png" class="w-16">
-            <h1>GEOMERDING! Le nouveau grand jeu qui teste votre culture Géographique!</h1>
+            <a href=""><img src="assets/img/logo_de_ouf.png" class="w-16"></a>
+            <h1 class="pl-10">GEOMERDING! Le nouveau grand jeu qui teste votre culture Géographique!</h1>
             </div>
             <p id="text4" class="pr-32">GEOMERDING!</p>
             
@@ -27,14 +27,17 @@
     <main>
         <section id="BG" class="flex flex-col w-screen h-screen bg text-white">
             <article class="w-screen h-2/3 flex flex-row ">
-            <div id="Img" class="w-3/4 h-2/3"> </div>
+                
+            <div id="Img" class="w-3/4 h-2/3"> <img src="assets/img/logo-G.png" id="logo" class="pl-24 py-5 h-[38rem] w-[50rem]"> </div>
             <div class="flex flex-col w-1/3">
                 <div id="map" class=""></div>
                 <div class="flex flex-col justify-center items-center p-3">
-                    <button id="bttn" style="width: fit-content; height: fit-content;" class="hover:text-blue-900">GUESS</button>
+                    <button id="start" style="width: fit-content; height: fit-content;" class="hover:text-blue-900">START</button>
+                    <button id="bttn" style="width: fit-content; height: fit-content;" class="hover:text-blue-900 hidden">GUESS</button>
                     <p id="text"></p>
                     <p id="text2"></p>
                     <p id="text3" class="pt-2"></p>
+                    <a id="next" class="pt-5 hover:text-blue-900 text-lg hidden"></a>
                     <a id="refresh" href="" class="pt-5 hover:text-blue-900 text-lg"></a>
                     <p id="score" class="pt-2"></p>
                     <p id="text5"></p>
