--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     <header>
         <section class="bg-gray-900 p-2 text-white flex items-center gap-5 justify-between">
             <div class="flex items-center">
-            <a href=""><img src="assets/img/logo_de_ouf.png" class="w-16"></a>
+            <a href="index.html"><img src="assets/img/logo_de_ouf.png" class="w-16"></a>
             <h1 class="pl-10">GEOMERDING! Le nouveau grand jeu qui teste votre culture Géographique!</h1>
             </div>
+            <a href="quiz.html">Le  grand Quiz!</a>
             <p id="text4" class="pr-32">GEOMERDING!</p>
             
         </section>
